kubernetes/ziti-console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: ziti-console
  name: ziti-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ziti-console
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        app: ziti-console
        app.network/zitiblue: "true"
        app.network/zitired: "true"
    spec:
      containers:
        - env:
            - name: ZAC_SERVER_CERT_CHAIN
              value: /mnt/openziti/pki/ziti-controller-intermediate/certs/ziti-controller-server.cert
            - name: ZAC_SERVER_KEY
              value: /mnt/openziti/pki/ziti-controller-intermediate/keys/ziti-controller-server.key
          image: openziti/zac
          name: ziti-console
          ports:
            - containerPort: 1408
            - containerPort: 8443
          resources: {}
          volumeMounts:
            - mountPath: /mnt/openziti
              name: ziti-fs
          workingDir: /usr/src/app
      restartPolicy: Always
      volumes:
        - name: ziti-fs
          persistentVolumeClaim:
            claimName: ziti-fs
status: {}
