kubernetes/ziti-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: ziti-controller
  name: ziti-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ziti-controller
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      labels:
        app: ziti-controller
        app.network/zitiblue: "true"
        app.network/zitired: "true"
    spec:
      containers:
        - name: ziti-controller
          command: ["/bin/sh", "-c"]
          args:
            - cp -r /openziti/pki /mnt/openziti/pki;
              cp -r /openziti/shared /mnt/openziti/shared;
              rm -r /openziti/pki;
              rm -r /openziti/shared;
              ln -s /mnt/openziti/pki /openziti/pki;
              ln -s /mnt/openziti/shared /openziti/shared;
              /openziti/scripts/run-controller.sh;              
          image: openziti/quickstart
          ports:
            - containerPort: 1280
          resources: {}
          volumeMounts:
            - mountPath: /mnt/openziti
              name: ziti-fs
      restartPolicy: Always
      volumes:
        - name: ziti-fs
          persistentVolumeClaim:
            claimName: ziti-fs
status: {}
