kubernetes/ziti-controller-init-container-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: ziti-controller-init-container
  name: ziti-controller-init-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ziti-controller-init-container
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        app: ziti-controller-init-container
        app.network/zitiblue: "true"
        app.network/zitired: "true"
    spec:
      containers:
        - args:
            - /openziti/scripts/access-control.sh
          command:
            - /openziti/scripts/run-with-ziti-cli.sh
          image: openziti/quickstart
          name: ziti-controller-init-container
          resources: {}
          volumeMounts:
            - mountPath: /mnt/openziti
              name: ziti-fs
      restartPolicy: Always
      volumes:
        - name: ziti-fs
          persistentVolumeClaim:
            claimName: ziti-fs
status: {}
