kubernetes/ziti-edge-router-wss-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: ziti-edge-router-wss
  name: ziti-edge-router-wss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ziti-edge-router-wss
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        app: ziti-edge-router-wss
        app.network/zitiblue: "true"
        app.network/zitired: "true"
    spec:
      containers:                
        - command: ["/bin/sh", "-c"]
          args:
            - cp -r /openziti/pki /mnt/openziti/pki;
              cp -r /openziti/shared /mnt/openziti/shared;
              rm -r /openziti/pki;
              rm -r /openziti/shared;
              ln -s /mnt/openziti/pki /openziti/pki;
              ln -s /mnt/openziti/shared /openziti/shared;
              /openziti/scripts/run-router.sh wss
          image: openziti/quickstart
          name: ziti-edge-router-wss
          ports:
            - containerPort: 3023
          resources: {}
          volumeMounts:
            - mountPath: /mnt/openziti
              name: ziti-fs
      restartPolicy: Always
      volumes:
        - name: ziti-fs
          persistentVolumeClaim:
            claimName: ziti-fs
status: {}
