kubernetes/web-test-blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: web-test-blue
  name: web-test-blue
spec:
  selector:
    app: web-test-blue
  ports:
    - name: "80"
      port: 80
      targetPort: 80
