kubernetes/ziti-edge-router-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ziti-edge-router
  namespace: default
  labels:
    app: ziti-edge-router
  annotations:
    kubernetes.digitalocean.com/firewall-managed: "false"
    external-dns.alpha.kubernetes.io/hostname: "threatfend.io"
    external-dns.alpha.kubernetes.io/ttl: "30"
    external-dns.alpha.kubernetes.io/access: "private"
spec:
  ports:
    - name: "3022"
      port: 3022
      targetPort: 3022
  selector:
    app: ziti-edge-router
  type: LoadBalancer
