kubernetes/ziti-edge-router-wss-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ziti-edge-router-wss
  namespace: default
  labels:
    app: ziti-edge-router-wss
  annotations:
    kubernetes.digitalocean.com/firewall-managed: "false"
    external-dns.alpha.kubernetes.io/hostname: "threatfend.io"
    external-dns.alpha.kubernetes.io/ttl: "30"
    external-dns.alpha.kubernetes.io/access: "private"
spec:
  ports:
    - name: "3023"
      port: 3023
      targetPort: 3023
  selector:
    app: ziti-edge-router-wss
  type: LoadBalancer
