kubernetes/zitiblue-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zitiblue
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.network/zitiblue: "true"
  podSelector:
    matchLabels:
      app.network/zitiblue: "true"
